bk_ida/gccida/c3/find_if_header
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2469:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2469:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2471:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2471:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2477:4: error: expected ';' after expression
rtx v43; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2477:5: error: use of undeclared identifier 'v43'
rtx v43; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2480:4: error: expected ';' after expression
rtx v46; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2480:5: error: use of undeclared identifier 'v46'
rtx v46; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2482:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v48; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2483:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v49; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2502:4: error: expected ';' after expression
rtx v68; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2502:5: error: use of undeclared identifier 'v68'
rtx v68; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2511:4: error: expected ';' after expression
rtx v77; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2511:5: error: use of undeclared identifier 'v77'
rtx v77; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2522:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v88; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2527:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v93; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2557:4: error: expected ';' after expression
rtx pool_constant; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2557:5: error: use of undeclared identifier 'pool_constant'; did you mean 'get_pool_constant'?
rtx pool_constant; // r15 
    ^~~~~~~~~~~~~
    get_pool_constant
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/rtl.h:1305:12: note: 'get_pool_constant' declared here
extern rtx get_pool_constant            PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/ifcvt.c:2558:4: error: expected ';' after expression
rtx v124; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_if_header/src/obj/ifcvt.o] Error 1
